Import of KOKOGIKO/WWW-Blog-Metadata-Yadis-0.02 from CPAN.
gitpan-cpan-distribution: WWW-Blog-Metadata-Yadis
gitpan-cpan-version:      0.02
gitpan-cpan-path:         KOKOGIKO/WWW-Blog-Metadata-Yadis-0.02.tar.gz
gitpan-cpan-author:       KOKOGIKO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 Revision history for Perl extension WWW::Blog::Metadata::Yadis
 
+0.02  Tue Apr 4 12:20:00 2006
+        - Yadis Resource Descriptor MUST use absolute URL, so remove
+          URI module 
+
 0.01  Mon Apr 3 12:43:00 2006
 	- original version
+
