--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension WWW::Blog::Metadata::Yadis
 
+0.03  Tue Apr 4 12:42:00 2006
+        - Take first description if content contains two or more 
+          Yadis Resource Descriptor URL
+
 0.02  Tue Apr 4 12:20:00 2006
         - Yadis Resource Descriptor MUST use absolute URL, so remove
           URI module 
